crates/rustyray-macros/tests/ui/fail/const_function.stderr
error: #[remote] functions cannot be const
 --> tests/ui/fail/const_function.rs:4:1
  |
4 | const fn invalid_const() -> i32 {
  | ^^^^^
